Add jpastreamer-core module/dependency, Fix #15

--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,7 @@
         <module>termopoptimizer</module>
         <module>provider</module>
         <module>fieldgenerator</module>
+        <module>core</module>
     </modules>
     
     <!-- Properties -->
