Capitalize all JPA references

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -17,7 +17,7 @@
 
     <name>Application</name>
     <description>
-        The entry API of JpaStreamer
+        The entry API of JPAStreamer
     </description>
 
     <dependencies>
