--- a/exception/pom.xml
+++ b/exception/pom.xml
@@ -17,7 +17,7 @@
 
     <name>Exception</name>
     <description>
-        JpaStreamer Exceptions
+        JPAStreamer Exceptions
     </description>
 
 </project>
