--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
         <module>provider</module>
         <module>fieldgenerator</module>
         <module>core</module>
+        <module>integration</module>
     </modules>
     
     <!-- Properties -->
