--- a/provider/analytics-standard/pom.xml
+++ b/provider/analytics-standard/pom.xml
@@ -28,6 +28,12 @@
             <version>${jpa-streamer.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.speedment.common</groupId>
+            <artifactId>rest</artifactId>
+            <version>${speedment-version}</version>
+        </dependency>
+
     </dependencies>
 
 </project>
