--- a/fieldgenerator/pom.xml
+++ b/fieldgenerator/pom.xml
@@ -26,7 +26,7 @@
     <artifactId>fieldgenerator</artifactId>
     <packaging>pom</packaging>
 
-    <name>FieldGenerator</name>
+    <name>FieldGenerator - Parent</name>
 
     <properties>
         <module-name>jpastreamer.fieldgenerator</module-name>
