--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
 
         <!-- later maven-javadoc-plugin versions does not support aggregate? -->
         <jpa.version>2.2</jpa.version>
-        <maven-javadoc-plugin-version>3.1.1</maven-javadoc-plugin-version>
+        <maven-javadoc-plugin-version>3.2.0</maven-javadoc-plugin-version>
         <maven-source-plugin-version>3.2.0</maven-source-plugin-version>
         <maven-dependency-plugin-version>3.1.1</maven-dependency-plugin-version>
         <maven-shade-plugin-version>3.2.1</maven-shade-plugin-version>
@@ -563,80 +563,12 @@
                             </additionalOptions>
                             <groups>
                                 <group>
-                                    <title>Code Generator</title>
-                                    <packages>com.speedment.common.codegen:com.speedment.common.codegen.*</packages>
-                                </group>
-                                <group>
-                                    <title>Runtime Application</title>
-                                    <packages>com.speedment.runtime.application:com.speedment.runtime.application.*</packages>
-                                </group>
-                                <group>
-                                    <title>Runtime Database Model</title>
-                                    <packages>com.speedment.runtime.config:com.speedment.runtime.config.*</packages>
-                                </group>
-                                <group>
-                                    <title>Runtime Application</title>
-                                    <packages>com.speedment.runtime.application:com.speedment.runtime.application.*</packages>
-                                </group>
-                                <group>
-                                    <title>Runtime Expressions</title>
-                                    <packages>com.speedment.runtime.compute:com.speedment.runtime.compute.*</packages>
-                                </group>
-                                <group>
-                                    <title>Runtime Type Mappers</title>
-                                    <packages>com.speedment.runtime.typemapper:com.speedment.runtime.typemapper.*</packages>
-                                </group>
-                                <group>
-                                    <title>Runtime Fields and Predicates</title>
-                                    <packages>com.speedment.runtime.com.speedment.jpa.stream.field:com.speedment.runtime.com.speedment.jpa.stream.field.*</packages>
-                                </group>
-                                <group>
-                                    <title>Runtime Bulk Updates</title>
-                                    <packages>com.speedment.runtime.bulk:com.speedment.runtime.bulk.*</packages>
-                                </group>
-                                <group>
-                                    <title>Runtime Join</title>
-                                    <packages>com.speedment.runtime.join:com.speedment.runtime.join.*</packages>
-                                </group>
-                                <group>
-                                    <title>Runtime Core</title>
-                                    <packages>com.speedment.runtime.core:com.speedment.runtime.core.*</packages>
-                                </group>
-                                <group>
-                                    <title>Generator Translator System</title>
-                                    <packages>com.speedment.generator.translator:com.speedment.generator.translator.*</packages>
-                                </group>
-                                <group>
-                                    <title>Generator Built-In Translators</title>
-                                    <packages>com.speedment.generator.standard:com.speedment.generator.standard.*</packages>
-                                </group>
-                                <group>
-                                    <title>Generator Core</title>
-                                    <packages>com.speedment.generator.core:com.speedment.generator.core.*</packages>
-                                </group>
-                                <group>
-                                    <title>Tool Actions</title>
-                                    <packages>com.speedment.tool.actions:com.speedment.tool.actions.*</packages>
-                                </group>
-                                <group>
-                                    <title>Tool Configuration</title>
-                                    <packages>com.speedment.tool.config:com.speedment.tool.config.*</packages>
-                                </group>
-                                <group>
-                                    <title>Tool Property Editor</title>
-                                    <packages>com.speedment.tool.propertyeditor:com.speedment.tool.propertyeditor.*</packages>
-                                </group>
-                                <group>
-                                    <title>Tool Core</title>
-                                    <packages>com.speedment.tool.core:com.speedment.tool.core.*</packages>
+                                    <title>Application</title>
+                                    <packages>com.speedment.jpastreamer.application:com.speedment.jpastreamer.application.*</packages>
                                 </group>
                                 <group>
                                     <title>Commons Library</title>
                                     <packages>com.speedment.common.*</packages>
-                                </group>
-                                <group>
-                                    <title>Connectors</title>
-                                    <packages>com.speedment.runtime.connector:com.speedment.runtime.connector.*</packages>
                                 </group>
 
                             </groups>
