--- a/fieldgenerator/fieldgenerator-component/pom.xml
+++ b/fieldgenerator/fieldgenerator-component/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <artifactId>provider</artifactId>
         <groupId>com.speedment.jpastreamer</groupId>
-        <version>0.1.0</version>
+        <version>0.1.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
