--- a/fieldgenerator/fieldgenerator-component/pom.xml
+++ b/fieldgenerator/fieldgenerator-component/pom.xml
@@ -54,4 +54,15 @@
 
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
