--- a/fieldgenerator/pom.xml
+++ b/fieldgenerator/pom.xml
@@ -30,7 +30,7 @@
 
     <properties>
         <module-name>jpastreamer.fieldgenerator</module-name>
-        <maven.javadoc.skip>true</maven.javadoc.skip> <!--Todo: remove this, see #48-->
+<!--        <maven.javadoc.skip>true</maven.javadoc.skip> Todo: remove this, see #48-->
     </properties>
 
     <modules>
