--- a/fieldgenerator/fieldgenerator-standard/pom.xml
+++ b/fieldgenerator/fieldgenerator-standard/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <artifactId>fieldgenerator</artifactId>
         <groupId>com.speedment.jpastreamer</groupId>
-        <version>0.1.1-SNAPSHOT</version>
+        <version>0.1.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -102,17 +102,58 @@
                 </configuration>
             </plugin>
 
-            <plugin>
+<!--            <plugin>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <configuration>
-                    <!--Disables javadocs under the module system. Todo: Examine why-->
+                    &lt;!&ndash;Disables javadocs under the module system. Todo: Examine why&ndash;&gt;
                     <additionalOptions combine.self="override"></additionalOptions>
                     <source>8</source>
+                    <detectJavaApiLink>false</detectJavaApiLink>
+&lt;!&ndash;                    <excludePackageNames>com.speedment.jpastreamer.fieldgenerator.*</excludePackageNames>&ndash;&gt;
                 </configuration>
-            </plugin>
+            </plugin>-->
 
         </plugins>
     </build>
+
+    <!--Makes JavaDoc work on deploy -->
+    <profiles>
+        <profile>
+            <id>release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <configuration>
+                            <detectJavaApiLink>false</detectJavaApiLink>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
+
+
+    <!--    <profiles>
+            <profile>
+                <id>release</id>
+                <build>
+                    <plugins>
+                        <plugin>
+                            <artifactId>maven-javadoc-plugin</artifactId>
+                            <configuration>
+                                &lt;!&ndash;Disables javadocs under the module system. Todo: Examine why&ndash;&gt;
+                                <additionalOptions combine.self="override"></additionalOptions>
+                                <source>8</source>
+                                <detectJavaApiLink>false</detectJavaApiLink>
+                                &lt;!&ndash;<excludePackageNames>com.speedment.jpastreamer.fieldgenerator.*</excludePackageNames>&ndash;&gt;
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </build>
+            </profile>
+        </profiles>-->
 
 
 </project>
