--- a/fieldgenerator/fieldgenerator-test/pom.xml
+++ b/fieldgenerator/fieldgenerator-test/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <artifactId>fieldgenerator</artifactId>
         <groupId>com.speedment.jpastreamer</groupId>
-        <version>0.1.1-SNAPSHOT</version>
+        <version>0.1.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -27,6 +27,7 @@
 
     <properties>
         <module-name>jpastreamer.fieldgenerator.test</module-name>
+        <maven.javadoc.skip>true</maven.javadoc.skip>
     </properties>
 
     <name>FieldGenerator - Test</name>
@@ -64,5 +65,22 @@
             </plugin>
         </plugins>
     </build>
+
+    <!--Makes JavaDoc work on deploy -->
+    <profiles>
+        <profile>
+            <id>release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <configuration>
+                            <detectJavaApiLink>false</detectJavaApiLink>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
