--- a/application/pom.xml
+++ b/application/pom.xml
@@ -39,12 +39,16 @@
         <dependency>
             <groupId>com.speedment.jpastreamer</groupId>
             <artifactId>rootfactory</artifactId>
-<!--            <version>${jpa-streamer.version}</version>-->
         </dependency>
 
         <dependency>
             <groupId>javax.persistence</groupId>
             <artifactId>javax.persistence-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.speedment.jpastreamer</groupId>
+            <artifactId>field</artifactId>
         </dependency>
 
 <!--
