--- a/streamconfiguration/pom.xml
+++ b/streamconfiguration/pom.xml
@@ -21,27 +21,31 @@
         <artifactId>jpastreamer-parent</artifactId>
         <version>0.1.2-SNAPSHOT</version>
     </parent>
-
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>provider</artifactId>
-    <packaging>pom</packaging>
 
-    <name>Provider</name>
+    <artifactId>streamconfiguration</artifactId>
 
-    <modules>
-        <module>application-standard</module>
-        <module>autoclose-standard</module>
-        <module>builder-standard</module>
-        <module>pipeline-standard</module>
-        <module>renderer-standard</module>
-        <module>interopoptimizer-standard</module>
-        <module>merger-standard</module>
-        <module>criteria-standard</module>
-        <module>termopmodifier-standard</module>
-        <module>termopoptimizer-standard</module>
-        <module>analytics-standard</module>
-        <module>appinfo-standard</module>
-        <module>streamconfiguration-standard</module>
-    </modules>
+    <properties>
+        <module-name>jpastreamer.streamconfiguration</module-name>
+    </properties>
+
+    <name>StreamConfiguration</name>
+    <description>
+        Configuration of Streams
+    </description>
+
+    <dependencies>
+
+        <dependency>
+            <groupId>com.speedment.jpastreamer</groupId>
+            <artifactId>rootfactory</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.speedment.jpastreamer</groupId>
+            <artifactId>field</artifactId>
+        </dependency>
+
+    </dependencies>
 
 </project>
