Implement dynamic field joining

--- a/builder/pom.xml
+++ b/builder/pom.xml
@@ -39,6 +39,11 @@
             <groupId>com.speedment.jpastreamer</groupId>
             <artifactId>renderer</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.speedment.jpastreamer</groupId>
+            <artifactId>streamconfiguration</artifactId>
+        </dependency>
     </dependencies>
 
 
