--- a/streamconfiguration/pom.xml
+++ b/streamconfiguration/pom.xml
@@ -46,6 +46,11 @@
             <artifactId>field</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>javax.persistence-api</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
