Cleanup pom issues, Fix #2

--- a/pom.xml
+++ b/pom.xml
@@ -968,6 +968,12 @@
 
             <dependency>
                 <groupId>com.speedment.jpastreamer</groupId>
+                <artifactId>javanine</artifactId>
+                <version>${jpa-streamer.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.speedment.jpastreamer</groupId>
                 <artifactId>appinfo-standard</artifactId>
                 <version>${jpa-streamer.version}</version>
             </dependency>
