--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -14,7 +14,7 @@
 
 name: jpa-streamer
 title: JPAStreamer Docs
-version: master
+version: latest
 start_page: introduction:introduction.adoc
 nav:
   - modules/ROOT/nav.adoc
