--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
     <!-- Project Metadata -->
     <name>Parent</name>
     <description>
-        JPAStreamer is a lightweight toolkit for creating Java Streams from database content
+        JPAstreamer - a lightweight library for expressing JPA queries as Java Streams
     </description>
     
     <!-- Modules -->
@@ -108,14 +108,16 @@
             <timezone>America/Los_Angeles</timezone>
         </developer>
         <developer>
-            <id>julgus</id>        
-            <name>Julia Gustafsson (GitHub:julgus)</name>
+            <id>julgus</id>
+            <name>Julia Gustafsson</name>
+            <url>https://github.com/julgus</url>
             <timezone>Europe/Stockholm</timezone>
         </developer>
         <developer>
-            <id>dekmm</id>        
-             <name>Mislav Miličević (GitHub:dekmm)</name>
-            <timezone>Europe/Zagreb</timezone>
+            <id>dekmm</id>
+            <name>Mislav Miličević</name>
+            <url>https://github.com/dekmm</url>
+            <timezone>Europe/Stockholm</timezone>
         </developer>
     </developers>
     
