--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -14,7 +14,7 @@
 
 name: jpa-streamer
 title: JPAStreamer Docs
-version: 0.1.3-SNAPSHOT
+version: 0.1.3
 start_page: introduction:introduction.adoc
 nav:
   - modules/ROOT/nav.adoc
