--- a/fieldgenerator/fieldgenerator-test/pom.xml
+++ b/fieldgenerator/fieldgenerator-test/pom.xml
@@ -52,6 +52,13 @@
             <artifactId>field</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
