--- a/fieldgenerator/pom.xml
+++ b/fieldgenerator/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <artifactId>jpastreamer-parent</artifactId>
         <groupId>com.speedment.jpastreamer</groupId>
-        <version>0.1.5-SNAPSHOT</version>
+        <version>0.1.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
