--- a/integration/spring/spring-boot-jpastreamer-autoconfigure/pom.xml
+++ b/integration/spring/spring-boot-jpastreamer-autoconfigure/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>com.speedment.jpastreamer.integration.spring</groupId>
         <artifactId>spring-parent</artifactId>
-        <version>0.1.5-SNAPSHOT</version>
+        <version>0.1.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
