Rename core artifact to jpastreamer-core, Fix #74

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -23,7 +23,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>core</artifactId>
+    <artifactId>jpastreamer-core</artifactId>
 
     <properties>
         <module-name>jpastreamer.core</module-name>
