--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,7 +29,7 @@ jobs:
     strategy:
       matrix:
         # test against latest update of each major Java version, as well as specific updates of LTS versions:
-        java: [ 8, 8.0.192, 9, 10, 11.0.x , 12, 13 ]
+        java: [ 9, 10, 11, 12, 13 ]
     name: Java ${{ matrix.java }}
 
     steps:
