--- a/core/pom.xml
+++ b/core/pom.xml
@@ -119,6 +119,12 @@
             <version>${jpa-streamer.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.speedment.jpastreamer</groupId>
+            <artifactId>announcer</artifactId>
+            <version>${jpa-streamer.version}</version>
+        </dependency>
+
     </dependencies>
 
     <organization>
