--- a/pom.xml
+++ b/pom.xml
@@ -1012,6 +1012,12 @@
             </dependency>
 
             <dependency>
+                <groupId>com.speedment.jpastreamer</groupId>
+                <artifactId>announcer</artifactId>
+                <version>${jpa-streamer.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>javax.persistence</groupId>
                 <artifactId>javax.persistence-api</artifactId>
                 <version>${jpa.version}</version>
