--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -17,6 +17,7 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+    target-branch: "develop"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
