Add primitive variants. Work on #44

--- a/provider/builder-standard/pom.xml
+++ b/provider/builder-standard/pom.xml
@@ -61,6 +61,11 @@
             <artifactId>autoclose</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.speedment.jpastreamer</groupId>
+            <artifactId>javanine</artifactId>
+        </dependency>
+
         <!--TEST-->
 
         <dependency>
