--- a/rootfactory/pom.xml
+++ b/rootfactory/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <artifactId>jpastreamer-parent</artifactId>
         <groupId>com.speedment.jpastreamer</groupId>
-        <version>1.0.0</version>
+        <version>1.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
