--- a/integration/cdi/cdi-jpastreamer/pom.xml
+++ b/integration/cdi/cdi-jpastreamer/pom.xml
@@ -17,20 +17,33 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>com.speedment.jpastreamer</groupId>
-        <artifactId>jpastreamer-parent</artifactId>
+        <groupId>com.speedment.jpastreamer.integration.cdi</groupId>
+        <artifactId>cdi-parent</artifactId>
         <version>1.0.3-SNAPSHOT</version>
     </parent>
-
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.speedment.jpastreamer.integration</groupId>
-    <artifactId>integration-parent</artifactId>
-    <packaging>pom</packaging>
 
-    <name>Integration - Parent</name>
+    <artifactId>cdi-jpastreamer</artifactId>
 
-    <modules>
-        <module>spring</module>
-        <module>cdi</module>
-    </modules>
+    <properties>
+        <module-name>jpastreamer.integration.cdi</module-name>
+    </properties>
+
+    <name>Integration - CDI</name>
+    <description>
+        A CDI module that adds support for JPAStreamer injection.
+    </description>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.speedment.jpastreamer</groupId>
+            <artifactId>application</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.enterprise</groupId>
+            <artifactId>cdi-api</artifactId>
+            <version>${cdi.version}</version>
+        </dependency>
+    </dependencies>
 </project>
