Prepare for version bump to 1.1.1

--- a/pom.xml
+++ b/pom.xml
@@ -632,6 +632,7 @@
                             <excludes>
                                 <exclude>**/README</exclude>
                                 <exclude>**/README.md</exclude>
+                                <exclude>**.adoc</exclude>
                                 <exclude>**/package-info.java</exclude>
                                 <exclude>**/nbactions.xml</exclude>
                                 <exclude>**/nb-configuration.xml</exclude>
